--- a/src/app/footer.component/footer.component.html
+++ b/src/app/footer.component/footer.component.html
@@ -24,9 +24,9 @@
       <div class="col-lg-2 col-6">
         <h6 class="fw-bold text-uppercase ls-1 small mb-3">Support</h6>
         <ul class="list-unstyled small">
-          <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Help Center</a></li>
-          <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Privacy Policy</a></li>
-          <li class="mb-2"><a href="#" class="text-muted text-decoration-none footer-link">Terms of Use</a></li>
+          <li class="mb-2"><a routerLink="/help" class="text-muted text-decoration-none footer-link">Help Center</a></li>
+          <li><a routerLink="/legal" class="text-dark fw-bold">Terms of Service</a></li>
+          <li><a routerLink="/legal" class="text-dark fw-bold">Privacy Policy</a>.</li>
         </ul>
       </div>
 
